Fixed footer bug on small screens.

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,20 +1,21 @@
 html {
-	position: relative;
-	min-height: 100%;
+	height: 100%;
 }
 
 body {
-	margin-bottom: 80px!important; /* main top padding + footer height */
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: 60px; /* footer height */
-	line-height: 60px; /* vertically center text */
 	text-align: center;
 	background-color: #f5f5f5;
+}
+
+footer .container {
+	line-height: 1.6;
+	padding: 15px;
 }
 
 h1 { 
@@ -23,6 +24,7 @@ h1 {
 
 main {
 	padding-top: 20px;
+	flex: 1 0 auto;
 }
 
 p {
